# Geant4Compton

./: .gitignore  1mev.mac  2mev.mac  CMakeLists.txt  Histo08Mev.txt  Histo12Mev.txt  Histo14Mev.txt  Histo16Mev.txt  Histo18Mev.txt  Histo1MeV.txt  Histo21Mev.txt  Histo2Mev.txt  basher.sh  cleaner.sh  executerEnergy.sh  in0.8MeV.txt  in1.2MeV.txt  in1.4MeV.txt  in1.6MeV.txt  in1.8MeV.txt  in1MeV.txt  in2MeV.txt  init_vis.mac  mover.sh  positions.txt  sr90Src.mac  sr90y90spec2.txt  test.sln  test_example.cpp  user.properties  vis.mac  vis2.mac  vis3.mac  vis_seb.mac
Debug/: test.ilk
Geant4.git/: config  packed-refs
Geant4.git/objects/pack/: pack-abb373ef7077692d646726a8580249dc64a10e01.idx
include/: ActionInitialization.hh  EventAction.hh  MagneticField.hh  MySensitiveDetector.hh  N01PrimaryGeneratorAction.hh  ParticleSourceMessenger.hh  PhysListEmStandard.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  RunAction.hh  StepMaxMessenger.hh  SteppingAction.hh  SteppingVerbose.hh  TrackerHit.hh  TrackerSD.hh  TrackingAction.hh  detector.hh  detectorMessenger.hh  file.hh  fileSingle.hh  generalParticleSource.hh  particle_gun.hh  particle_src.hh  physicsList.hh
src/: ActionInitialization.cpp  EventAction.cpp  MagneticField.cpp  N01PrimaryGeneratorAction.cpp  ParticleSourceMessenger.cpp  PhysListEmStandard.cpp  PhysicsList.cpp  PhysicsListMessenger.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  StepMax.cpp  StepMaxMessenger.cpp  SteppingAction.cpp  SteppingVerbose.cpp  TrackerHit.cpp  TrackerSD.cpp  TrackingAction.cpp  detector.cpp  detectorMessenger.cpp  file.cpp  fileSingle.cpp  generalParticleSource.cpp  particle_gun.cpp  particle_src.cpp  physicsList.cpp
test/: ReadMe.txt  stdafx.cpp  test.cpp  test.vcxproj  test.vcxproj.filters
test/Debug/: vc141.idb
test/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
